--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
             height: 100%;
         }
 
+        #optionalinfo {
+            background: rgba(255, 255, 255, 0.253);
+            box-shadow: 0 0 40px #00275A;
+            text-align: center;
+            margin-top: 15px;
+            padding-top: 10px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            width: 100%;
+        }
+
+        #long {
+            text-align: center;
+            width: 70%;
+        }
+
         #footer {
             display: flex;
             justify-content: center;
@@ -120,6 +136,16 @@
             line-height: 28px;
         }
 
+        b {
+
+            color: #ffffff;
+            text-align: center;
+            text-shadow: 1px 1px 2px #000000;
+            text-decoration: none;
+            font-size: 15px;
+            line-height: 23px;
+        }
+
         a:hover,
         a:focus {
             text-decoration: underline;
@@ -146,8 +172,15 @@
 
     <div id="youtube">
         <h4>Kanał na Youtube</h4>
-        <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na
-                YouTube!</a></a>
+        <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na YouTube!</a></a>
+    </div>
+
+    <div id="optionalinfo">
+        <b>Jeśli chcesz się nauczyć programować to zapraszam na stronę <a href="http://pythoninietylko.ct8.pl">Python i nie tylko!</a></b>
+    </div>
+
+    <div id="optionalinfo">
+        <p>Strona jest ciągle w przygotowaniu, więc mogą na niej wystąpić błędy</p>
     </div>
 
 </body>
