--- a/projects.html
+++ b/projects.html
@@ -135,7 +135,7 @@
 
     <div id="pagecontent">
         <h4>Moje projekty</h4>
-        <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath</a><br></b>
+        <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath for Android</a><br></b>
         <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a></b>
     </div>
 </body>
