--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -62,7 +62,7 @@
 
   <div id="game">
     <canvas id="unity-canvas" width=1000 height=600
-      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center"></canvas>
+      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 80px #00275A;"></canvas>
     <script src="Build/2.3 Beta.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
