--- a/about_me.html
+++ b/about_me.html
@@ -130,7 +130,8 @@
 
     <div id="pagecontent">
         <h4>O mnie</h4>
-        <b>Jestem programistą z Polski.</b>
+        <b>Jestem programistą z Polski. Zajmuje się tworzeniem gier, botów na discorda<br>
+            i aplikacji użytkowych.</b>
     </div>
 </body>
 
