--- a/index.html
+++ b/index.html
@@ -5,152 +5,7 @@
     <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
     <meta charset=utf-8 />
     <title>misiekii123</title>
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-            border: 0;
-        }
-
-        body {
-            background-image: url(background.png);
-            background-attachment: fixed;
-            background-color: #000;
-            color: #000;
-            font-family: Arial, Verdana, Tahoma;
-            font-size: 12px;
-        }
-
-        #main {
-            background: rgba(0, 0, 0, 0.253);
-            box-shadow: 0 0 40px #00275A;
-            margin-top: 15px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            width: 100%;
-        }
-
-        #mainwrapper {
-            display: table;
-            text-align: center;
-            margin: 0 auto;
-        }
-
-        #menu {
-            background: rgba(0, 0, 0, 0.253);
-            box-shadow: 0 0 40px #00275A;
-            text-align: center;
-            margin-top: 15px;
-            padding-top: 10px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            width: 100%;
-        }
-
-        #youtube {
-            background: rgba(0, 0, 0, 0.253);
-            height: 100%;
-            box-shadow: 0 0 40px #00275A;
-            text-align: center;
-            margin-top: 15px;
-            padding-top: 10px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            width: 100%;
-            height: 100%;
-        }
-
-        #optionalinfo {
-            background: rgba(0, 0, 0, 0.253);
-            box-shadow: 0 0 40px #00275A;
-            text-align: center;
-            margin-top: 15px;
-            padding-top: 10px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            width: 100%;
-        }
-
-        #long {
-            text-align: center;
-            width: 70%;
-        }
-
-        #footer {
-            display: flex;
-            justify-content: center;
-            bottom: 0px;
-            position: absolute;
-        }
-
-        h1 {
-            color: #ffffff;
-            font-size: 44px;
-            font-weight: normal;
-            text-shadow: 1px 1px 2px #A7A7A7;
-        }
-
-        h2 {
-            color: #ffffff;
-            font-weight: normal;
-            font-size: 25px;
-            text-shadow: 1px 1px 2px #D4D4D4;
-        }
-
-        h3 {
-            margin-top: 10px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            text-align: center;
-            color: rgba(255, 255, 255, 0.534);
-            font-weight: normal;
-            font-size: 15px;
-            text-shadow: 1px 1px 2px #000;
-        }
-
-        h4 {
-            color: #ffffff;
-            font-weight: normal;
-            font-size: 25px;
-            text-shadow: 1px 1px 2px #000000;
-        }
-
-        ul {
-            text-align: left;
-            margin-top: 10px;
-        }
-
-        p {
-            font-size: 10px;
-            margin-top: 5px;
-            color: rgb(197, 197, 197);
-        }
-
-        a {
-
-            color: #ffffff;
-            text-align: center;
-            text-shadow: 1px 1px 2px #000000;
-            text-decoration: none;
-            font-size: 15px;
-            line-height: 28px;
-        }
-
-        b {
-
-            color: #ffffff;
-            text-align: center;
-            text-shadow: 1px 1px 2px #000000;
-            text-decoration: none;
-            font-size: 15px;
-            line-height: 23px;
-        }
-
-        a:hover,
-        a:focus {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
