--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
     <meta charset=utf-8 />
     <title>misiekii123</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
     <div id="main">
         <div id="mainwrapper">
             <h1>misiekii123</h1>
@@ -18,24 +17,20 @@
         </div>
     </div>
 
-    <div id="menu">
+    <div id="content">
         <h4>Menu</h4>
         <a><a href="about_me.html">O mnie</a><br></a>
         <a><a href="projects.html">Moje projekty</a><br></a>
         <a><a href="contact.html">Kontakt</a><br></a>
     </div>
 
-    <div id="youtube">
+    <div id="content">
         <h4>Kanał na Youtube</h4>
         <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na YouTube!</a></a>
     </div>
 
-    <div id="optionalinfo">
+    <div id="content">
         <b>Jeśli chcesz się nauczyć programować to zapraszam na stronę <a href="http://pythoninietylko.ct8.pl">Python i nie tylko!</a></b>
-    </div>
-
-    <div id="optionalinfo">
-        <p>Strona jest ciągle w przygotowaniu, więc mogą na niej wystąpić błędy</p>
     </div>
 
 </body>
