--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -6,52 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>MazeGame | misiekii123</title>
-  <style type="text/css">
-    * {
-      margin: 0;
-      padding: 0;
-      border: 0;
-    }
-
-    body {
-      background-image: url(background.png);
-      background-color: #000;
-      color: rgb(255, 255, 255);
-      font-family: Arial, Verdana, Tahoma;
-      font-size: 12px;
-    }
-
-    #main {
-      background: rgba(0, 0, 0, 0.253);
-      box-shadow: 0 0 40px #00275A;
-      margin-top: 20px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      width: 100%;
-    }
-
-    #mainwrapper {
-      display: table;
-      text-align: center;
-      margin: 0 auto;
-    }
-
-    #game {
-      display: table;
-      text-align: center;
-      margin-top: 8px;
-      padding-top: 30px;
-      width: 100%;
-      height: 100%;
-    }
-
-    h1 {
-      color: #ffffff;
-      font-size: 44px;
-      font-weight: normal;
-      text-shadow: 1px 1px 2px #A7A7A7;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
@@ -63,7 +18,8 @@
 
   <div id="game">
     <canvas id="unity-canvas" width=1000 height=600
-      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A;"></canvas>
+      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A;">
+    </canvas>
     <script src="Build/2.3 Beta.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
