mazegame page new look

--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -18,7 +18,7 @@
 
   <div id="game">
     <canvas id="unity-canvas" width=1000 height=600
-      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A;">
+      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A; margin-bottom: 20px;">
     </canvas>
     <script src="Build/2.3 Beta.loader.js"></script>
     <script>
