--- a/discord.html
+++ b/discord.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="description">
-        <b>test</b>
+        <b>Jeśli lubisz ten kanał i chcesz dowiedzieć się czegoś więcej to zapraszam na mój serwer na Discordzie. Możesz na nim zadawać pytania, rozmawiać z innymi widzami a także brać udział w różnych eventach.</b>
     </div>
 
     <iframe style="float: right; box-shadow: 0 0 40px #00275A; margin-right: 100px;" src="https://canary.discord.com/widget?id=928959020696498196&theme=dark" width="350"
