--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -18,7 +18,7 @@
 
   <div id="game">
     <canvas id="unity-canvas" width=1000 height=600
-      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A; margin-bottom: 20px;">
+      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A; margin-bottom: 20px; border-radius:25px;">
     </canvas>
     <script src="Build/2.3 Beta.loader.js"></script>
     <script>
@@ -34,6 +34,10 @@
         devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
     </script>
+  </div>
+
+  <div id="content"; style="margin-bottom: 20px;">
+    <b><a href="comingsoon.html">Download</a></b>
   </div>
 </body>
 
