--- a/about_me.html
+++ b/about_me.html
@@ -22,8 +22,7 @@
     <div id="content">
         <div id="long">
             <h4>O mnie</h4>
-            <b>Jestem programistą z Polski. Zajmuje się tworzeniem gier, botów na discorda<br>
-                i aplikacji użytkowych.</b>
+            <b>Jestem programistą z Polski. Zajmuje się tworzeniem gier, botów na discorda i aplikacji użytkowych. Od pewnego czasu zajmuje się prowadzeniem kanału na YouTubie. Interesuje się komputerami, uwielbiam retro oraz programowanie.</b>
         </div>
     </div>
 </body>
