--- a/discord.html
+++ b/discord.html
@@ -12,6 +12,7 @@
     <div id="main">
         <div id="mainwrapper">
             <h1>misiekii123</h1>
+            <p><a href="index.html">Home</a></p>
         </div>
     </div>
 
