discord server page update

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div id="content">
         <h4>Kontakt</h4>
         <b>Adres e-mail: <a href="mailto:yt.misiekii123@gmail.com" target="_blank">yt.misiekii123@gmail.com</a><br></b>
-        <b><a href="discord.html" target="_blank">Serwer na Discordzie</a></b>
+        <b><a href="discord.html">Serwer na Discordzie</a></b>
     </div>
 </body>
 
