--- a/discord.html
+++ b/discord.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
     <meta charset=utf-8 />
-    <title>Serwer Discord</title>
+    <title>Serwer Discord | misiekii123</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,7 +12,6 @@
     <div id="main">
         <div id="mainwrapper">
             <h1>misiekii123</h1>
-            <p><a href="index.html">Home</a></p>
         </div>
     </div>
 
@@ -23,7 +22,11 @@
         </div>
     </div>
 
-    <iframe style="float: right; box-shadow: 0 0 40px #00275A; margin-right: 100px;" src="https://canary.discord.com/widget?id=928959020696498196&theme=dark" width="350"
+    <div id="description" style="margin-top: 100px;">
+        <b><a href="javascript:history.back()">Powrót</a></b>
+    </div>
+
+    <iframe style="float: right; position: fixed; box-shadow: 0 0 40px #00275A; margin-right: 100px;" src="https://canary.discord.com/widget?id=928959020696498196&theme=dark" width="350"
         height="500" allowtransparency="true" frameborder="0"
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
