--- a/index.html
+++ b/index.html
@@ -30,17 +30,10 @@
     </div>
 
     <div id="content">
-        <b>Jeśli chcesz się nauczyć programować to zapraszam na stronę <a href="http://pythoninietylko.ct8.pl">Python i nie tylko!</a></b>
+        <h4>Chcesz więcej?</h4>
+        <c>Już za niedługo powstanie nowy projekt, który będzie realizowany z moim znajomym, czyli ze <a href="https://www.youtube.com/channel/UCAyb-PhieSt9AlWAUYdN6hw/featured">zmielonym</a></c>
     </div>
 
 </body>
-
-
-<footer>
-    <div id="footer">
-        <h3>Copyright by misiekii123</h3>
-    </div>
-</footer>
-
 
 </html>
