--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
       <h2>
         Nie znaleziono strony!
       </h2>
-      <b><a href="index.html">Powrót na stronę główną<br></a></b>
+      <b><a href="index.html"><br>Powrót na stronę główną<br></a></b>
     </div>
   </body>
 </html>
