comments game update

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,8 @@
     <div id="content">
         <h4>Moje projekty</h4>
         <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath for Android</a><br></b>
-        <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a></b>
+        <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a><br></b>
+        <b>• <a href="comingsoon.html">Comments game</a></b>
     </div>
 </body>
 </html>
