--- a/comingsoon.html
+++ b/comingsoon.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="content">
-        <b>Coming soon</b>
+        <h2>Coming soon</h2>
         <b><br>W najbliższym czasie dodam taką możliwość<br>Kliknij poniższy przycisk aby powrócić na poprzednią stronę</b>
     </div>
 
