--- a/404.html
+++ b/404.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="favicon.ico" />
 
-    <title>Nie znaleziono strony</title>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="favicon.ico" />
 
-    <link rel="stylesheet" href="/style.css" />
-  </head>
+  <title>Nie znaleziono strony</title>
 
-  <body>
-    <div id="main">
-      <div id="mainwrapper">
-        <h1>
-          misiekii123
-        </h1>
-      </div>
+  <link rel="stylesheet" href="/style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="content">
+      <h1>
+        misiekii123
+      </h1>
     </div>
-    
-    <div id="content">
+  </div>
+
+  <div class="container">
+    <div class="content">
       <h2>
         Nie znaleziono strony!
       </h2>
       <b><a href="index.html"><br>Powrót na stronę główną<br></a></b>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
