--- a/about_me.html
+++ b/about_me.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="container">
+        <div class="content">
             <h1>misiekii123</h1>
             <h2></h2>
             <p><a href="index.html">Home</a> • <a href="projects.html">Moje projekty</a> • <a
@@ -19,10 +19,14 @@
         </div>
     </div>
 
-    <div id="content">
-        <div id="long">
-            <h4>O mnie</h4>
-            <b>Jestem programistą z Polski. Zajmuje się tworzeniem gier, botów na discorda i aplikacji użytkowych. Od pewnego czasu zajmuje się prowadzeniem kanału na YouTubie. Interesuje się komputerami, uwielbiam retro oraz programowanie.</b>
+    <div class="container">
+        <div class="content">
+            <div class="long">
+                <h4>O mnie</h4>
+                <b>Jestem programistą z Polski. Zajmuje się tworzeniem gier, botów na discorda i aplikacji użytkowych.
+                    Od pewnego czasu zajmuje się prowadzeniem kanału na YouTubie. Interesuje się komputerami, uwielbiam
+                    retro oraz programowanie.</b>
+            </div>
         </div>
     </div>
 </body>
