--- a/index.html
+++ b/index.html
@@ -9,29 +9,37 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="container">
+        <div class="content">
             <h1>misiekii123</h1>
             <h2></h2>
             <p>Witaj na mojej stronie!</p>
         </div>
     </div>
 
-    <div id="content">
-        <h4>Menu</h4>
-        <a><a href="about_me.html">O mnie</a><br></a>
-        <a><a href="projects.html">Moje projekty</a><br></a>
-        <a><a href="contact.html">Kontakt</a><br></a>
+    <div class="container">
+        <div class="content">
+            <h4>Menu</h4>
+            <a><a href="about_me.html">O mnie</a><br></a>
+            <a><a href="projects.html">Moje projekty</a><br></a>
+            <a><a href="contact.html">Kontakt</a><br></a>
+        </div>
     </div>
 
-    <div id="content">
-        <h4>Kanał na Youtube</h4>
-        <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na YouTube!</a></a>
+    <div class="container">
+        <div class="content">
+            <h4>Kanał na Youtube</h4>
+            <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na
+                    YouTube!</a></a>
+        </div>
     </div>
 
-    <div id="content">
-        <h4>Chcesz więcej?</h4>
-        <c>Już za niedługo powstanie nowy projekt, który będzie realizowany z moim znajomym, czyli ze <a href="https://www.youtube.com/channel/UCAyb-PhieSt9AlWAUYdN6hw/featured">zmielonym</a></c>
+    <div class="container">
+        <div class="content">
+            <h4>Chcesz więcej?</h4>
+            <c>Już za niedługo powstanie nowy projekt, który będzie realizowany z moim znajomym, czyli ze <a
+                    href="https://www.youtube.com/channel/UCAyb-PhieSt9AlWAUYdN6hw/featured">zmielonym</a></c>
+        </div>
     </div>
 
 </body>
