--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="container">
+        <div class="content">
             <h1>misiekii123</h1>
             <h2></h2>
             <p><a href="index.html">Home</a> • <a href="about_me.html">O mnie</a> • <a href="projects.html">Moje
@@ -19,10 +19,14 @@
         </div>
     </div>
 
-    <div id="content">
-        <h4>Kontakt</h4>
-        <b>Adres e-mail: <a href="mailto:yt.misiekii123@gmail.com" target="_blank">yt.misiekii123@gmail.com</a><br></b>
-        <b><a href="discord.html">Serwer na Discordzie</a></b>
+    <div class="container">
+        <div class="content">
+            <h4>Kontakt</h4>
+            <b>Adres e-mail: <a href="mailto:yt.misiekii123@gmail.com"
+                    target="_blank">yt.misiekii123@gmail.com</a><br></b>
+            <b><a href="https://discord.com/invite/XQwaDtjY8n" target="_blank">Serwer na Discordzie</a><br></b>
+        </div>
     </div>
 </body>
+
 </html>
