--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="container">
+        <div class="content">
             <h1>misiekii123</h1>
             <h2></h2>
             <p><a href="index.html">Home</a> • <a href="about_me.html">O mnie</a> • <a href="contact.html">Kontakt</a>
@@ -19,11 +19,15 @@
         </div>
     </div>
 
-    <div id="content">
-        <h4>Moje projekty</h4>
-        <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath for Android</a><br></b>
-        <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a><br></b>
-        <b>• <a href="comingsoon.html">Comments game</a></b>
+    <div class="container">
+        <div class="content">
+            <h4>Moje projekty</h4>
+            <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath for
+                    Android</a><br></b>
+            <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a><br></b>
+            <b>• <a href="comingsoon.html">Comments game</a></b>
+        </div>
     </div>
 </body>
+
 </html>
