--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="header">
         <div class="content">
             <h1>misiekii123</h1>
             <h2></h2>
