fixed sticky header

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div class="container">
-        <div class="content">
+    <div class="header">
+        <div class="headercontent">
             <h1>misiekii123</h1>
             <h2></h2>
             <p><a href="index.html">Home</a> • <a href="about_me.html">O mnie</a> • <a href="projects.html">Moje
