--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <div class="header">
-        <div class="content">
+        <div class="headercontent">
             <h1>misiekii123</h1>
             <h2></h2>
             <p>Witaj na mojej stronie!</p>
         </div>
     </div>
-
+   
     <div class="container">
         <div class="content">
             <h4>Menu</h4>
