--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="content">
+  <div class="header">
+    <div class="headercontent">
       <h1>
         misiekii123
       </h1>
