--- a/comingsoon.html
+++ b/comingsoon.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="content">
+    <div class="header">
+        <div class="headercontent">
             <h1>misiekii123</h1>
         </div>
     </div>
