--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,8 @@
             <b>• <a href="https://github.com/misiekii123/ObstacleDeath" target="_blank">ObstacleDeath for
                     Android</a><br></b>
             <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a><br></b>
-            <b>• <a href="comingsoon.html">Comments game</a></b>
+            <b>• <a href="comingsoon.html">Comments game</a><br></b>
+            <b>• <a href="comingsoon.html">Racing game</a></b>
         </div>
     </div>
 </body>
