--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,7 @@
         <div class="headercontent">
             <h1>misiekii123</h1>
             <h2></h2>
-            <p><a href="index.html">Home</a> • <a href="about_me.html">O mnie</a> • <a href="projects.html">Moje
-                    projekty</a></p>
+            <p><a href="index.html">Home</a> • <a href="about_me.html">O mnie</a> • <a href="projects.html">Moje projekty</a></p>
         </div>
     </div>
 
@@ -24,7 +23,7 @@
             <h4>Kontakt</h4>
             <b>Adres e-mail: <a href="mailto:yt.misiekii123@gmail.com"
                     target="_blank">yt.misiekii123@gmail.com</a><br></b>
-            <b><a href="https://discord.com/invite/XQwaDtjY8n" target="_blank">Serwer na Discordzie</a><br></b>
+            <b><a href="discord.html">Serwer na Discordzie</a><br></b>
         </div>
     </div>
 </body>
