--- a/discord.html
+++ b/discord.html
@@ -9,24 +9,25 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="header">
+        <div class="headercontent">
             <h1>misiekii123</h1>
         </div>
     </div>
 
-    <div id="description">
-        <b>Jeśli lubisz ten kanał i chcesz dowiedzieć się czegoś więcej to zapraszam na mój serwer na Discordzie. Możesz na nim zadawać pytania, rozmawiać z innymi widzami a także brać udział w różnych eventach.</b>
-        <div id="long">
-            <b><br><br>|<br>|<br>|<br>|<br>\/<br><a href="https://discord.com/invite/XQwaDtjY8n">Dołącz teraz!</a></b>
+    <div class="container">
+        <div class="content">
+            <b>Jeśli lubisz ten kanał i chcesz dowiedzieć się czegoś więcej to zapraszam na mój serwer na Discordzie. Możesz na nim zadawać pytania, rozmawiać z innymi widzami a także brać udział w różnych eventach.</b>
+            <div id="long">
+                <b><br><a href="https://discord.com/invite/XQwaDtjY8n">Dołącz teraz!</a></b>
+            </div>
+        </div>
+        
+    </div>
+
+    <div class="container">
+        <div class="content">
+            <b><a href="javascript:history.back()">Powrót</a></b>
         </div>
     </div>
-
-    <div id="description" style="margin-top: 100px;">
-        <b><a href="javascript:history.back()">Powrót</a></b>
-    </div>
-
-    <iframe style="float: right; position: fixed; box-shadow: 0 0 40px #00275A; margin-right: 100px;" src="https://canary.discord.com/widget?id=928959020696498196&theme=dark" width="350"
-        height="500" allowtransparency="true" frameborder="0"
-        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
