--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -5,6 +5,8 @@
   <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>MazeGame | misiekii123</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
