--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
     <meta charset=utf-8 />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Kontakt | misiekii123</title>
     <link rel="stylesheet" href="style.css" />
 </head>
