--- a/MazeGame/index.html
+++ b/MazeGame/index.html
@@ -5,22 +5,20 @@
   <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>MazeGame | misiekii123</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-  <div id="main">
-    <div id="mainwrapper">
+  <div class="header">
+    <div class="headercontent">
       <h1>MazeGame</h1>
     </div>
   </div>
 
-  <div id="game">
+  <div class="game">
     <canvas id="unity-canvas" width=1000 height=600
-      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; box-shadow: 0 0 60px #00275A; margin-bottom: 20px; border-radius:25px;">
+      style="width: 1000px; height: 600px; background: url('Build/2.3 Beta.jpg') center; margin-bottom: 20px; border-radius:25px;">
     </canvas>
     <script src="Build/2.3 Beta.loader.js"></script>
     <script>
@@ -38,8 +36,10 @@
     </script>
   </div>
 
-  <div id="content"; style="margin-bottom: 20px;">
-    <b><a href="comingsoon.html">Download</a></b>
+  <div class="container">
+    <div class="content">
+      <b><a href="comingsoon.html">Download</a></b>
+    </div>
   </div>
 </body>
 
