--- a/MazeGame/comingsoon.html
+++ b/MazeGame/comingsoon.html
@@ -10,17 +10,22 @@
 </head>
 
 <body>
-    <div id="main">
-        <div id="mainwrapper">
+    <div class="header">
+        <div class="headercontent">
             <h1>misiekii123</h1>
         </div>
     </div>
 
-    <div id="content">
-        <h2>Coming soon</h2>
-        <b><br>W najbliższym czasie dodam taką możliwość<br>Kliknij poniższy przycisk aby powrócić na poprzednią stronę</b>
+    <div class="container">
+        <div class="content">
+            <h2>Coming soon</h2>
+            <b><br>W najbliższym czasie dodam taką możliwość<br>Kliknij poniższy przycisk aby powrócić na poprzednią
+                stronę</b>
+        </div>
     </div>
 
-    <div id="content">
-        <b><a href="javascript:history.back()">Powrót</a></b>
+    <div class="container">
+        <div class="content">
+            <b><a href="javascript:history.back()">Powrót</a></b>
+        </div>
     </div>
