--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                     Android</a><br></b>
             <b>• <a href="MazeGame/index.html" target="_blank">MazeGame</a><br></b>
             <b>• <a href="comingsoon.html">Comments game</a><br></b>
-            <b>• <a href="comingsoon.html">Racing game</a></b>
+            <b>• <a href="https://github.com/misiekii123/RacingGame" target="_blank">Racing game</a></b>
         </div>
     </div>
 </body>
