--- a/christmas/index.html
+++ b/christmas/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webBuild v0.1.loader.js";
+      var loaderUrl = buildUrl + "/webBuild v0.01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webBuild v0.1.data.gz",
-        frameworkUrl: buildUrl + "/webBuild v0.1.framework.js.gz",
-        codeUrl: buildUrl + "/webBuild v0.1.wasm.gz",
+        dataUrl: buildUrl + "/webBuild v0.01.data",
+        frameworkUrl: buildUrl + "/webBuild v0.01.framework.js",
+        codeUrl: buildUrl + "/webBuild v0.01.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Misiekii123",
         productName: "Christmas",
