big look update

--- a/index.html
+++ b/index.html
@@ -1,48 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl-PL">
 
 <head>
-    <link rel="icon" href="favicon.ico" sizes="16x16 32x32 64x64 128x128 256x256">
-    <meta charset=utf-8 />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" href="/Assets/favicon.ico">
     <title>misiekii123</title>
+    <script defer src="scripts/include-menu.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="menu-style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="header">
-        <div class="headercontent">
-            <h1>misiekii123</h1>
-            <h2></h2>
-            <p>Witaj na mojej stronie!</p>
-        </div>
+    <div id="menu-container"></div>
+    <div class="content">
+        <h1 lang="pl-PL">Moja strona jeszcze nie jest gotowa...</h1>
+        <h2 lang="pl-PL">Wróć później!</h2>
+        <h1 lang="en-US">My website isn't ready yet...</h1>
+        <h2 lang="en-US">Come back later!</h2>
     </div>
-   
-    <div class="container">
-        <div class="content">
-            <h4>Menu</h4>
-            <a><a href="about_me.html">O mnie</a><br></a>
-            <a><a href="projects.html">Moje projekty</a><br></a>
-            <a><a href="contact.html">Kontakt</a><br></a>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="content">
-            <h4>Kanał na Youtube</h4>
-            <a><a href="https://www.youtube.com/channel/UCjfxxI8dt_cqszJAUBME57g" target="_blank">Zobacz mój kanał na
-                    YouTube!</a></a>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="content">
-            <h4>Chcesz więcej?</h4>
-            <c>Już za niedługo powstanie nowy projekt, który będzie realizowany z moim znajomym, czyli ze <a
-                    href="https://www.youtube.com/channel/UCAyb-PhieSt9AlWAUYdN6hw/featured">zmielonym</a></c>
-        </div>
-    </div>
-
 </body>
 
 </html>
