--- a/404.html
+++ b/404.html
@@ -17,11 +17,16 @@
 
 <body>
     <div id="menu-container"></div>
-    <h1 lang="pl-PL">Nie znaleziono takiej strony!</h1>
-    <h2 lang="pl-PL">Wróć na stronę główną:</h2>
+    <div class="content">
+        <h1 lang="pl-PL">Nie znaleziono takiej strony!</h1>
+        <h2 lang="pl-PL">Wróć na stronę główną:</h2>
 
-    <h1 lang="en-US">No such page found!</h1>
-    <h2 lang="en-US">Return to home page:</h2>
+        <h1 lang="en-US">No such page found!</h1>
+        <h2 lang="en-US">Return to home page:</h2>
+
+        <button class="home" lang="pl-PL" onclick="location.href='https://misiekii123.github.io';">Powrót</button>
+        <button class="home" lang="en-US" onclick="location.href='https://misiekii123.github.io';">Return</button>
+    </div>
 </body>
 
 </html>
