--- a/menu.html
+++ b/menu.html
@@ -25,12 +25,12 @@
         <div class="menu-toggle">&#9776;</div>
         <nav class="menu">
             <ul>
-                <li><a lang="en-US" href="#">Home</a></li>
-                <li><a lang="pl-PL" href="#">Strona główna</a></li>
+                <li><a lang="en-US" href="https://misiekii123.github.io">Home</a></li>
+                <li><a lang="pl-PL" href="https://misiekii123.github.io">Strona główna</a></li>
                 <li><a lang="en-US" href="#">About me</a></li>
                 <li><a lang="pl-PL" href="#">O mnie</a></li>
-                <li><a lang="en-US" href="#">Projects</a></li>
-                <li><a lang="pl-PL" href="#">Projekty</a></li>
+                <li><a lang="en-US" href="./projects.html">Projects</a></li>
+                <li><a lang="pl-PL" href="./projects.html">Projekty</a></li>
                 <li><a lang="en-US" href="#">Contact</a></li>
                 <li><a lang="pl-PL" href="#">Kontakt</a></li>
 
@@ -42,12 +42,12 @@
         </nav>
         <div class="phone-menu">
             <ul>
-                <li><a lang="en-US" href="#">Home</a></li>
-                <li><a lang="pl-PL" href="#">Strona główna</a></li>
+                <li><a lang="en-US" href="https://misiekii123.github.io">Home</a></li>
+                <li><a lang="pl-PL" href="https://misiekii123.github.io">Strona główna</a></li>
                 <li><a lang="en-US" href="#">About me</a></li>
                 <li><a lang="pl-PL" href="#">O mnie</a></li>
-                <li><a lang="en-US" href="#">Projects</a></li>
-                <li><a lang="pl-PL" href="#">Projekty</a></li>
+                <li><a lang="en-US" href="./projects.html">Projects</a></li>
+                <li><a lang="pl-PL" href="./projects.html">Projekty</a></li>
                 <li><a lang="en-US" href="#">Contact</a></li>
                 <li><a lang="pl-PL" href="#">Kontakt</a></li>
 
