--- a/projects.html
+++ b/projects.html
@@ -17,15 +17,15 @@
 
 <body>
     <div id="menu-container"></div>
-    <div class="content">
-        <h1 lang="pl-PL">Nie znaleziono takiej strony!</h1>
-        <h2 lang="pl-PL">Wróć na stronę główną:</h2>
-
-        <h1 lang="en-US">No such page found!</h1>
-        <h2 lang="en-US">Return to home page:</h2>
-
-        <button class="btn" lang="pl-PL" onclick="location.href='https://misiekii123.github.io';">Powrót</button>
-        <button class="btn" lang="en-US" onclick="location.href='https://misiekii123.github.io';">Return</button>
+    <div class="cards">
+        <div class="card-content">
+            <img src="/Assets/MazeGame.png" class="img">
+        </div>
+        <div class="card-content">
+            <h1>MazeGame</h1>
+            <h3 style="margin-top: 10px;">Simple game made in Unity. My first own project.</h3>
+            <button class="btn" onclick="location.href='/MazeGame/index.html';"><h2>Play</h2></button> 
+        </div>
     </div>
 </body>
 
