--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div id="menu-container"></div>
     <div class="content">
         <h1 lang="pl-PL">Moja strona jeszcze nie jest gotowa...</h1>
-        <h2 lang="pl-PL">Wróć później!</h2>
+        <h2 lang="pl-PL">Trwają przygotowania zakładki z <a href="/projects.html">projektami</a>!</h2>
         <h1 lang="en-US">My website isn't ready yet...</h1>
-        <h2 lang="en-US">Come back later!</h2>
+        <h2 lang="en-US">The <a href="/projects.html">projects</a> tab is being prepared!</h2>
     </div>
 </body>
 
